@@ -2,6 +2,7 @@
 	
 	* Added the capability to change db port in setup: Closes [#1082] 
 	* Don't ask to choose scm when only one is available
+	* Removed unused outdated ./www/include/proj_email.php
 
 2005-05-17	Marcelo Mottalli <marcelo@gforgegroup.com>
 
